deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echosens-demo-service
  namespace: liver-healthy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echosens-demo-service
      version: v1
  template:
    metadata:
      labels:
        app: echosens-demo-service
        version: v1
      annotations:
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/chronwell-images/dtx/echosens-demo-service:0.0.7
          imagePullPolicy: IfNotPresent
          name: echosens-demo-service
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 5
