deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echosens-demo-service
  namespace: liver-healthy
  labels:
    app: echosens-demo-service
    version: v1
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 3000
  selector:
    app: echosens-demo-service
